demo/25-sample-policy/allow-cluster-dns.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-dns-lookups
  namespace: demo
spec:
  selector: all()
  order: 10
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    destination:
      ports:
      - '53'
