demo/25-sample-policy/allow-port80-egress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-demo-port80-egress
  namespace: demo
spec:
  selector: app == 'netshoot'
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: app == 'open-nginx'
      ports:
      - '80'
